--- a/index.html
+++ b/index.html
@@ -20,14 +20,31 @@
           <img width="200px" class="img img-circle img-thumbnail cernter-block" ng-src="{{product.images[0].full}}"/>
         </div>
 
-        <section>
+        <section ng-init="tab = 1">
           <ul class="nav nav-pills">
-            <li> <a href ng-click="tab = 1">Description</a> </li>
-            <li> <a href ng-click="tab = 2">Specifications</a> </li>
-            <li> <a href ng-click="tab = 3">Reviews</a> </li>
+            <li ng-class="{ active: tab === 1 }">
+              <a href ng-click="tab = 1">Descrição</a>
+            </li>
+            <li ng-class="{ active: tab === 2 }">
+              <a href ng-click="tab = 2">Especificações</a>
+            </li>
+            <li ng-class="{ active: tab === 3 }">
+              <a href ng-click="tab = 3">Comentarios</a>
+            </li>
           </ul>
-          {{tab}}
         </section>
+        <div clas="panel" ng-show="tab === 1">
+          <h4>Descrição</h4>
+          <p>{{product.description}}</p>
+        </div>
+        <div clas="panel" ng-show="tab === 2">
+          <h4>Especificação</h4>
+          <p>Nenhuma especificação</p>
+        </div>
+        <div clas="panel" ng-show="tab === 3">
+          <h4>Comentário</h4>
+          <p>Nenhum comentário</p>
+        </div>
       </div>
     </div>
 
