--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
       <h1>Store shay</h1>
     </header>
     <div class="list-group-item" ng-repeat="product in lojaCtrl.products" class="list-group-item">
-      <h3>
-        {{product.name}}
-        <em class="pull-right"> {{product.price | currency}} </em>
+      <h3 produto-titulo>
       </h3>
-
       <!--  *****GALERIA*****  -->
       <div class='gallery' ng-controller="GaleriaController as galeriaCtrl" ng-show="product.images.length">
         <div class="img-wrap">
@@ -59,31 +56,31 @@
               <blockquote>
                 <strong>{{comentario.estrelas}} Estrelas</strong>
                 {{comentario.texto}}
-                <cite class="clearfix">—{{comentario.autor}}</cite>
+                <cite class="clearfix">—{{comentario.autor}} em {{comentario.dtCriado | date}}</cite>
               </blockquote>
             </li>
       	    <p ng-show="">Nenhum comentário</p>
           </ul>
 
           <!--  COMENTARIO FORM -->
-          <form name="comentarioForm" ng-controller="ComentarioController as comentarioCtrl" ng-submit ="comentarioCtrl.addComentario(product)">
+          <form name="comentarioForm" ng-controller="ComentarioController as comentarioCtrl" ng-submit ="comentarioForm.$valid && comentarioCtrl.addComentario(product)" novalidate>
               <blockquote>
                 <strong>Stars: {{comentarioCtrl.comentario.estrelas}} </strong>
                 {{comentarioCtrl.comentario.texto}}
-                <cite class="clearfix">—{{comentarioCtrl.comentario.autor}}</cite>
+                <cite class="clearfix">—{{comentarioCtrl.comentario.autor}} </cite>
               </blockquote>
 
               <h4>Submit a Review</h4>
               <fieldset class="form-group">
-                <select ng-model="comentarioCtrl.comentario.estrelas" class="form-control" ng-options="estrelas for estrelas in [5,4,3,2,1]"  title="Estrelas">
+                <select ng-model="comentarioCtrl.comentario.estrelas" class="form-control" ng-options="estrelas for estrelas in [5,4,3,2,1]"  title="Estrelas" required>
                   <option value="">Avalie o produto</option>
                 </select>
               </fieldset>
               <fieldset class="form-group">
-                <textarea ng-model="comentarioCtrl.comentario.texto" class="form-control" placeholder="Comente sobre o produto..." title="Comentario"></textarea>
+                <textarea ng-model="comentarioCtrl.comentario.texto" class="form-control" placeholder="Comente sobre o produto..." title="Comentario" required></textarea>
               </fieldset>
               <fieldset class="form-group">
-                <input ng-model="comentarioCtrl.comentario.autor" type="email" class="form-control" placeholder="rock@rock.com" title="Email" />
+                <input ng-model="comentarioCtrl.comentario.autor" type="email" class="form-control" placeholder="rock@rock.com" title="Email" required/>
               </fieldset>
               <fieldset class="form-group">
                 <input ng-submit="addComentario" type="submit" class="btn btn-primary pull-right" value="Enviar Comentario" />
